@@ -738,6 +738,7 @@ void guLibPanel::OnArtistEditTracksClicked( wxCommandEvent &event )
         {
             m_Db->UpdateSongs( &Songs );
             UpdateImages( Songs, Images );
+            m_PlayerPanel->UpdatedTracks( &Songs );
         }
         TrackEditor->Destroy();
     }
@@ -758,6 +759,7 @@ void guLibPanel::OnAlbumEditTracksClicked( wxCommandEvent &event )
         {
             m_Db->UpdateSongs( &Songs );
             UpdateImages( Songs, Images );
+            m_PlayerPanel->UpdatedTracks( &Songs );
         }
         TrackEditor->Destroy();
     }
@@ -909,6 +911,7 @@ void guLibPanel::OnSongsEditTracksClicked( wxCommandEvent &event )
         {
             m_Db->UpdateSongs( &Songs );
             UpdateImages( Songs, Images );
+            m_PlayerPanel->UpdatedTracks( &Songs );
         }
         TrackEditor->Destroy();
     }
